Bug #44507
osd/PeeringState.cc: 5582: FAILED ceph_assert(ps->is_acting(osd_with_shard) || ps->is_up(osd_with_sh ard))
Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
-5229> 2020-03-07T23:28:57.910+0000 3b2ca700 10 osd.2 pg_epoch: 7257 pg[1.77( v 17'2 (17'2,17'2] local-lis/les=7130/7136 n=0 ec=6192/4 lis/c=7130/6996 les/c/f=7136/6998/0 sis=7130) [2] r=0 lpr=7132 pi=[6996,7130)/1 crt=17'2 lcod 0'0 mlcod 0'0 active+undersized mbc={}] handle_advance_map [2]/[2] -- 2/2 -5163> 2020-03-07T23:28:57.910+0000 3b2ca700 10 osd.2 pg_epoch: 7258 pg[1.77( v 17'2 (17'2,17'2] local-lis/les=7130/7136 n=0 ec=6192/4 lis/c=7130/6996 les/c/f=7136/6998/0 sis=7130) [2] r=0 lpr=7132 pi=[6996,7130)/1 crt=17'2 lcod 0'0 mlcod 0'0 active+undersized mbc={}] state<Started/Primary/Active>: Active advmap -4507> 2020-03-07T23:28:58.131+0000 3b2ca700 -1 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.1.0-1861-gd8f2426/rpm/el8/BUILD/ceph-15.1.0-1861-gd8f2426/src/osd/PeeringState.cc: In function 'boost::statechart::result PeeringState::Active::react(const PeeringState::AdvMap&)' thread 3b2ca700 time 2020-03-07T23:28:57.932791+0000 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.1.0-1861-gd8f2426/rpm/el8/BUILD/ceph-15.1.0-1861-gd8f2426/src/osd/PeeringState.cc: 5582: FAILED ceph_assert(ps->is_acting(osd_with_shard) || ps->is_up(osd_with_shard)) ceph version 15.1.0-1861-gd8f2426 (d8f2426160f876cd44c5a8889df7591ac5eef323) octopus (rc) 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x158) [0x616054] 2: (()+0x50e26e) [0x61626e] 3: (PeeringState::Active::react(PeeringState::AdvMap const&)+0x297) [0x98daa7] 4: (boost::statechart::simple_state<PeeringState::Active, PeeringState::Primary, PeeringState::Activating, (boost::statechart::history_mode)0>::react_impl(boost::statechart::event_base const&, void const*)+0x185) [0x9c0c35] 5: (boost::statechart::simple_state<PeeringState::Clean, PeeringState::Active, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::react_impl(boost::statechart::event_base const&, void const*)+0x3e) [0x9c7a8e] 6: (PeeringState::advance_map(std::shared_ptr<OSDMap const>, std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> >&, int, std::vector<int, std::allocator<int> >&, int, PeeringCtx&)+0x1ff) [0x96e47f] 7: (PG::handle_advance_map(std::shared_ptr<OSDMap const>, std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> >&, int, std::vector<int, std::allocator<int> >&, int, PeeringCtx&)+0x1e6) [0x7b1266] 8: (OSD::advance_pg(unsigned int, PG*, ThreadPool::TPHandle&, PeeringCtx&)+0x313) [0x723a93] 9: (OSD::dequeue_peering_evt(OSDShard*, PG*, std::shared_ptr<PGPeeringEvent>, ThreadPool::TPHandle&)+0x9e) [0x725bde] 10: (ceph::osd::scheduler::PGPeeringItem::run(OSD*, OSDShard*, boost::intrusive_ptr<PG>&, ThreadPool::TPHandle&)+0x56) [0x9588e6] 11: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0x17ff) [0x71906f] 12: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x48e) [0xd4e43e] 13: (ShardedThreadPool::WorkThreadSharded::entry()+0x14) [0xd56d14]
/a/sage-2020-03-07_15:51:10-rados-wip-sage4-testing-2020-03-07-0705-distro-basic-smithi/4835087
Related issues
History
#1 Updated by Sage Weil over 3 years ago
- Description updated (diff)
#2 Updated by Neha Ojha over 3 years ago
- Status changed from New to Fix Under Review
- Pull request ID set to 33841
#3 Updated by xie xingguo over 3 years ago
- Status changed from Fix Under Review to Pending Backport
- Backport set to octupus
#4 Updated by Nathan Cutler over 3 years ago
- Backport changed from octupus to octopus
#5 Updated by Nathan Cutler over 3 years ago
- Copied to Backport #44717: octopus: osd/PeeringState.cc: 5582: FAILED ceph_assert(ps->is_acting(osd_with_shard) || ps->is_up(osd_with_sh ard)) added
#6 Updated by Nathan Cutler over 3 years ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".